--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,16 +76,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+  fonts:
+    - family: Alegreya
+      fonts:
+        - asset: assets/fonts/Alegreya/Alegreya-VariableFont_wght.ttf
+        - asset: assets/fonts//Alegreya/Alegreya-Italic-VariableFont_wght.ttf
+          style: italic
+    - family: Alegreya Sans
+      fonts:
+        - asset: assets/fonts/AlegreyaSans/AlegreyaSans-Regular.ttf
+        - asset: assets/fonts/AlegreyaSans/AlegreyaSans-Italic.ttf
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
